# LorenzMachine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  format.yml  lint.yml  test.yml
include/: lorenzMachine.hpp  teleprinter.hpp  wheel.hpp  wheelGroup.hpp
src/: lorenzMachine.cpp  main.cpp  teleprinter.cpp  wheel.cpp  wheelGroup.cpp
test/: CMakeLists.txt  test_lorenzMachine.cpp  test_main.cpp  test_teleprinter.cpp  test_wheel.cpp  test_wheelGroup.cpp
